Fixed the error with creating new Family Now to create a family you need to indicate the type(mother, brother) of user