@@ -15,6 +15,7 @@ import ru.hse.moms.response.FamilyResponse;
 import ru.hse.moms.security.AuthUtils;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -22,26 +23,34 @@ public class FamilyService {
     private final FamilyMapper familyMapper;
     private final FamilyRepository familyRepository;
     private final UserRepository userRepository;
+    private final TypeService typeService;
+
     public FamilyResponse getFamily(Long familyId) {
         Family family = familyRepository.findById(familyId).orElseThrow(() ->
-                new FamilyNotFound(String.format("Family with id %d not found", familyId )));
+                new FamilyNotFound(String.format("Family with id %d not found", familyId)));
         return familyMapper.makeFamilyResponse(family);
     }
-    public FamilyResponse updateFamily(FamilyRequest familyRequest){
+
+    public FamilyResponse updateFamily(FamilyRequest familyRequest) {
         Long currentUserId = AuthUtils.getCurrentId();
         assert currentUserId != null;
+
         User user = userRepository.findById(currentUserId).orElseThrow(
                 () -> new RuntimeException("User is logged but no info in database"));
         Family family = familyRepository.findByHost(user).orElseThrow(
                 () -> new RuntimeException("No hosted families found for you"));
-        if (!familyRequest.getMembersId().isEmpty()) {
-            List<User> members = familyRequest.getMembersId().stream().map(
-                    (userId) -> userRepository.findById(userId).orElseThrow(() ->
-                            new UserNotFoundException(
-                                    String.format("User with id: %s was not found", userId )))).toList();
 
-            family.getMembers().addAll(members);
+        if (!familyRequest.getMembers().isEmpty()) {
+            List<User> members = familyRequest.getMembers().stream().map(
+                            memberRequest -> {
+                                User member = userRepository.findById(memberRequest.getMemberId())
+                                        .orElseThrow(() -> new RuntimeException("User not found"));
+                                member.setType(typeService.getTypeById(memberRequest.getTypeId()).get()); // Пример, если есть метод setTypeId в User
+                                return member;
+                            })
+                    .collect(Collectors.toList());
         }
+
         if (familyRequest.getHostId() != null) {
             family.setHost(userRepository.findById(familyRequest.getHostId()).orElseThrow(() ->
                     new UserNotFoundException(
@@ -49,17 +58,24 @@ public class FamilyService {
         }
         return familyMapper.makeFamilyResponse(familyRepository.saveAndFlush(family));
     }
-    public FamilyResponse createFamily(FamilyRequest familyRequest){
-        List<User> members = familyRequest.getMembersId().stream().map(
-                (userId) -> userRepository.findById(userId).orElseThrow(() ->
-                        new UserNotFoundException(
-                                String.format("User with id: %s was not found", userId )))).toList();
+
+    public FamilyResponse createFamily(FamilyRequest familyRequest) {
+        List<User> members = familyRequest.getMembers().stream()
+                .map(memberRequest -> {
+                    User user = userRepository.findById(memberRequest.getMemberId())
+                            .orElseThrow(() -> new RuntimeException("User not found"));
+                    user.setType(typeService.getTypeById(memberRequest.getTypeId()).get());
+                    return user;
+                })
+                .collect(Collectors.toList());
 
         Long currentUserId = AuthUtils.getCurrentId();
         assert currentUserId != null;
+
         User host = userRepository.findById(currentUserId).orElseThrow(() ->
                 new UserNotFoundException(
                         String.format("User with id: %s was not found", currentUserId)));
+
         if (familyRepository.existsByHost(host)) {
             throw new HostOneFamilyException(String.format("User with id already hosts family with id: %s",
                     familyRepository.findByHost(host).get().getId()));
@@ -71,6 +87,7 @@ public class FamilyService {
                 .build();
         return familyMapper.makeFamilyResponse(familyRepository.saveAndFlush(newFamily));
     }
+
     public boolean deleteFamily() {
         Long currentUserId = AuthUtils.getCurrentId();
         assert currentUserId != null;
@@ -85,7 +102,4 @@ public class FamilyService {
         );
         return true;
     }
-
-
-
 }
